--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "ramsey/uuid-doctrine": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
@@ -48,7 +49,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.6"
+            "php": "7.1.23"
         },
         "sort-packages": true
     },
