--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,7 +20,7 @@ services:
         resource: '../../src/AppBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+        exclude: '../../src/AppBundle/{Entity,Tests}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
@@ -28,6 +28,10 @@ services:
         resource: '../../src/AppBundle/Actions'
         public: true
         tags: ['controller.service_arguments']
+
+    AppBundle\Domains\Common\Subscribers\Doctrine\TimestampableSubscriber:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
