--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,15 @@
     },
     "require": {
         "php": ">=7.1",
+        "doctrine/annotations": "^1.6",
         "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/migrations": "^2.0",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "^2.6",
+        "nelmio/alice": "^3.5",
+        "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
