feature(uuid serializer + entity user/client) implement uuid serializer for jms + fix relation order beetween user and client

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,6 +33,11 @@ services:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
 
+    mhujer.jms_serializer.uuid.uuid_serializer_handler:
+        class: Mhujer\JmsSerializer\Uuid\UuidSerializerHandler
+        tags:
+            - { name: jms_serializer.subscribing_handler }
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
