--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.4",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "mhujer/jms-serializer-uuid": "^2.0",
         "nelmio/alice": "^3.5",
         "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid-doctrine": "^1.5",
