--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,13 @@
     },
     "require": {
         "php": ">=7.1",
+        "behat/gherkin": "^4.6",
+        "behat/mink": "^1.7",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.3",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/symfony2-extension": "^2.1",
+        "behatch/contexts": "^3.2",
         "doctrine/annotations": "^1.6",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/migrations": "^2.0",
@@ -24,6 +31,7 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "mhujer/jms-serializer-uuid": "^2.0",
         "nelmio/alice": "^3.5",
+        "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
@@ -35,6 +43,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "behat/behat": "^3.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
