--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,9 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        driver: pdo_sqlite
+        path: '%database_path%'
+        memory: true
