--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,8 @@ app:
 
 login_check:
     path: /api/login_check
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
