--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,6 +21,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
             provider: user_provider
+        api_doc:
+            pattern:  ^/api/doc
+            stateless: true
+            anonymous: true
         api:
             pattern:   ^/api
             stateless: true
@@ -40,4 +44,5 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
