--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "php": ">=7.1",
+        "ext-json": "*",
         "behat/gherkin": "^4.6",
         "behat/mink": "^1.7",
         "behat/mink-browserkit-driver": "^1.3",
@@ -44,6 +45,7 @@
     },
     "require-dev": {
         "behat/behat": "^3.5",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
